outputs_20260401-083520-84c756d6/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\src\egtm_atom_3_phase_inverter_pwm.c:11:
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\include/egtm_atom_3_phase_inverter_pwm.h:10:31: error: unknown type name 'float32'; did you mean '_Float32'?
   10 | void updateEgtmAtom3phInvDuty(float32 *requestDuty);
      |                               ^~~~~~~
      |                               _Float32
In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\src\egtm_atom_3_phase_inverter_pwm.c:13:
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\include/IfxEgtm_Pwm.h:5: error: unterminated #ifndef
    5 | #ifndef IFXEGTM_PWM_H
In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\src\egtm_atom_3_phase_inverter_pwm.c:14:
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\include/IfxEgtm_Trigger.h:6:1: error: expected specifier-qualifier-list before 'typedef'
    6 | typedef enum { IfxEgtm_TrigSource_0 = 0 } IfxEgtm_TrigSource;
      | ^~~~~~~

In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:5:
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\include/IfxEgtm_Pwm.h:5: error: unterminated #ifndef
    5 | #ifndef IFXEGTM_PWM_H
In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:6:
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\include/IfxEgtm_Trigger.h:6:1: error: expected specifier-qualifier-list before 'typedef'
    6 | typedef enum { IfxEgtm_TrigSource_0 = 0 } IfxEgtm_TrigSource;
      | ^~~~~~~

In file included from C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity.h:22,
                 from C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\test\test_egtm_atom_3_phase_inverter_pwm.c:1:
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\test\test_egtm_atom_3_phase_inverter_pwm.c: In function 'test_TC_G2_002_init_configures_deadtime_values':
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\test\test_egtm_atom_3_phase_inverter_pwm.c:95:41: error: implicit declaration of function 'mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_getCallCount'; did you mean 'mock_IfxEgtm_Pwm_updateChannelsDutyImmediate_getCallCount'? [-Wimplicit-function-declaration]
   95 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(1, mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_getCallCount(), "Dead-time configuration must be applied exactly once");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\test\test_egtm_atom_3_phase_inverter_pwm.c:95:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
   95 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(1, mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_getCallCount(), "Dead-time configuration must be applied exactly once");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\test\test_egtm_atom_3_phase_inverter_pwm.c:96:80: error: 'mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising' undeclared (first use in this function); did you mean 'mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtRising'?
   96 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_RISING_US,  mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0],  "Rising DT for channel 0 must be 1.0 us");
      |                                                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\test\test_egtm_atom_3_phase_inverter_pwm.c:96:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
   96 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_RISING_US,  mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0],  "Rising DT for channel 0 must be 1.0 us");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\test\test_egtm_atom_3_phase_inverter_pwm.c:96:80: note: each undeclared identifier is reported only once for each function it appears in
   96 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_RISING_US,  mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0],  "Rising DT for channel 0 must be 1.0 us");
      |                                                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\test\test_egtm_atom_3_phase_inverter_pwm.c:96:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
   96 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_RISING_US,  mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0],  "Rising DT for channel 0 must be 1.0 us");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\test\test_egtm_atom_3_phase_inverter_pwm.c:99:80: error: 'mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtFalling' undeclared (first use in this function); did you mean 'mock_IfxEgtm_Pwm_updateChannelDeadTimeImmediate_lastDtFalling'?
   99 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_FALLING_US, mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtFalling[0], "Falling DT for channel 0 must be 1.0 us");
      |                                                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity_internals.h:1119:183: note: in definition of macro 'UNITY_TEST_ASSERT_FLOAT_WITHIN'
 1119 | #define UNITY_TEST_ASSERT_FLOAT_WITHIN(delta, expected, actual, line, message)                   UnityAssertFloatsWithin((UNITY_FLOAT)(delta), (UNITY_FLOAT)(expected), (UNITY_FLOAT)(actual), (message), (UNITY_LINE_TYPE)(line))
      |                                                                                                                                                                                       ^~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_a9yypyj0\test\test_egtm_atom_3_phase_inverter_pwm.c:99:5: note: in expansion of macro 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE'
   99 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_DEADTIME_FALLING_US, mock_IfxEgtm_Pwm_updateChannelsDeadTimeImmediate_lastDtFalling[0], "Falling DT for channel 0 must be 1.0 us");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
